# mistral-ocr-reader-demo

./: .gitignore  README.md  index.py  netflix-culture-pdftron.html  pyproject.toml  renderer.py
output/: 06b47406-5dc9-4fbf-8520-fbc90f41c3c0.md  2873057f-f9e9-4c90-84d5-ae363f4d42a4.html  2873057f-f9e9-4c90-84d5-ae363f4d42a4.md  33d7738b-1fd6-4099-93e8-dd8203504ec6.html  7b0c4127-8534-4644-a1d2-6005685dc4ad.html  7b0c4127-8534-4644-a1d2-6005685dc4ad.md  84d82531-d34c-4ae8-ac30-b8c4316dc88e.html  84d82531-d34c-4ae8-ac30-b8c4316dc88e.md  bdc79ee6-27c9-4edc-9fda-6a46229af18b.html  bdc79ee6-27c9-4edc-9fda-6a46229af18b.md  d24cb1e9-2ecc-4610-8997-c41946516687.html  d24cb1e9-2ecc-4610-8997-c41946516687.json  d24cb1e9-2ecc-4610-8997-c41946516687.md
templates/: clean_html_preview-compare.html  clean_html_preview-single.html
